--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.2.2",
+    "@codemirror/language-data": "^6.3.1",
+    "@codemirror/view": "^6.21.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@uiw/react-codemirror": "^4.21.20",
+    "codemirror": "^6.0.1",
+    "daisyui": "^3.9.3",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
